--- a/GymApp/Views/Admin/AssignRole.cshtml
+++ b/GymApp/Views/Admin/AssignRole.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Assign Roles";
 }
 
+<script src="~/js/Pages/Admin/Admin.js" defer></script>
+
 <h2>Assign Roles</h2>
 <form id="assignRoleForm">
     <div style="margin-bottom: 20px;">
@@ -19,6 +21,3 @@
     <button type="submit" style="font-size: 1.2em; padding: 10px 20px;">Assign Role</button>
 </form>
 
-@section Scripts {
-    <script src="~/js/Pages/Admin/Admin.js"></script>
-}
