--- a/GymApp/Views/Default/DefaultPage.cshtml
+++ b/GymApp/Views/Default/DefaultPage.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Default Page";
-  
+    Layout = "../Shared/_LayoutUser.cshtml";
 }
+
 <script src="~/js/Pages/Default/Default.js" defer></script>
 <link rel="stylesheet" href="~/css/default.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
