--- a/GymApp/Views/Admin/AdminPage.cshtml
+++ b/GymApp/Views/Admin/AdminPage.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Admin Page";
+    Layout = "../Shared/_LayoutUser.cshtml";
 }
+
+<link rel="stylesheet" href="~/css/admin.css" />
+
 
 <h2>Admin Page</h2>
 <p>Welcome, Administrator!</p>
