--- a/GymApp/Views/Shared/_Layout.cshtml
+++ b/GymApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">Register Now!</a>
+                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">REGISTER NOW!</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="User" asp-action="Login">LOG IN</a>
