--- a/GymApp/Views/Shared/_LayoutUser.cshtml
+++ b/GymApp/Views/Shared/_LayoutUser.cshtml
@@ -7,33 +7,39 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/GymUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
-    <!-- Enlaza tu CSS personalizado para la barra de navegación -->
-  
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <div class="navbar-content">
-                <a class="navbar-brand" asp-area="" asp-controller="Exercise" asp-action="Create">
-                    <div class="brand-text">
-                        <span class="brand-top">FITNESS CENTER</span>
-                    </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
                 </a>
-                <div class="navbar-links">
-                    <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">Register Now!</a>
-                    <a class="nav-link" asp-area="" asp-controller="User" asp-action="Login">LOG IN</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">REGISTER NOW!</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Login">LOG IN</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="footer text-muted">
+        <div class="container text-center">
             &copy; 2024 - GymApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
