--- a/GymApp/wwwroot/css/users.css
+++ b/GymApp/wwwroot/css/users.css
@@ -11,14 +11,6 @@ body {
     margin: 0 auto;
 }
 
-header {
-    background-color: #1e4f4f;
-    color: white;
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-}
-
 footer {
     background-color: #ffffff;
     color: white;
@@ -26,32 +18,6 @@ footer {
     align-items: center;
     padding: 10px 20px;
 }
-
-header .logo {
-    height: 50px;
-    margin-right: 20px;
-}
-
-header nav {
-    display: flex;
-    gap: 20px;
-    margin-left: auto;
-}
-
-    header nav a {
-        color: white;
-        text-decoration: none;
-        font-size: 16px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-        header nav a img {
-            height: 20px;
-            margin-bottom: 5px;
-        }
 
 main {
     padding: 20px;
@@ -99,12 +65,18 @@ form button {
     width: 200px;
     border: none;
     border-radius: 5px;
-    background-color: #555;
+    background-color: #1e4f4f;
     color: white;
     font-size: 16px;
     cursor: pointer;
 }
 
     form button:hover {
-        background-color: #333;
+        background-color: #1e4f4f;
     }
+
+.btn-success {
+    color: #fff;
+    background-color: #164242;
+    border-color: #164242;
+}
