--- a/GymApp/Views/Routine/RecordResults.cshtml
+++ b/GymApp/Views/Routine/RecordResults.cshtml
@@ -13,6 +13,7 @@
             <form id="recordResultsForm">
                 <label for="exercise_id">Exercise</label>
                 <select id="exercise_id" name="exercise_id" required>
+                    <option value="">Select a Exercise</option>
                     <!-- Opciones para los ejercicios se llenarán aquí -->
                 </select>
                 <input type="hidden" id="exercise_type_id" name="exercise_type_id" />
