--- a/GymApp/Views/Exercise/Create.cshtml
+++ b/GymApp/Views/Exercise/Create.cshtml
@@ -14,6 +14,7 @@
             <form id="createExerciseForm" action="submit">
                 <label for="exercise_type_id">Select Exercise Type</label>
                 <select id="exercise_type_id" name="exercise_type_id">
+                    <option value="">Select a Exercise Type</option>
                     <!-- Options will be populated by JavaScript -->
                 </select>
                 
