--- a/GymApp/Views/Routine/Create.cshtml
+++ b/GymApp/Views/Routine/Create.cshtml
@@ -5,13 +5,14 @@
 <script src="~/js/pages/Routines/createRoutines.js" defer></script>
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-    <div class="container">
+<div class="container">
     <main>
         <h1>Create Routine</h1>
         <div class="form-container">
-            <form id="createRoutineForm" action="submit">
+            <form id="createRoutineForm">
                 <label for="member_id">Member</label>
                 <select id="member_id" name="member_id">
                     <option value="">Select a Member</option>
@@ -31,10 +32,9 @@
                 <input type="text" id="description" name="description" required>
 
                 <div class="button-container">
-                    <button type="submit">Create</button>
+                    <button type="button" id="submitRoutine">Create</button>
                 </div>
             </form>
         </div>
     </main>
 </div>
-
