--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml
@@ -29,7 +29,7 @@
                 <img src="/css/Img/Classes.png" alt="Classes Icon">
                 <span>Classes</span>
             </a>
-            <a href="#">
+            <a asp-controller="Home" asp-action="Index">
                 <img src="/css/Img/LogOut.png" alt="Log Out Icon">
                 <span>Log Out</span>
             </a>
