--- a/GymApp/wwwroot/css/assingRole.css
+++ b/GymApp/wwwroot/css/assingRole.css
@@ -15,7 +15,7 @@ body {
 
 h2 {
     font-size: 2.5em;
-    color: black;
+    color: #1e4f4f;
     margin-bottom: 30px;
 }
 
@@ -41,7 +41,7 @@ form {
 label {
     font-size: 1.2em;
     font-weight: bold;
-    color: black;
+    color: #1e4f4f;
 }
 
 select, input {
@@ -65,6 +65,6 @@ button[type="submit"] {
     width: 50%; /* Ajustamos el ancho del botón */
 }
 
-    button[type="submit"]:hover {
-        background-color: #164242;
-    }
+button[type="submit"]:hover {
+    background-color: #164242;
+}
