--- a/GymApp/Views/Member/MemberPage.cshtml
+++ b/GymApp/Views/Member/MemberPage.cshtml
@@ -7,7 +7,30 @@
 <link rel="stylesheet" href="~/css/routines.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome Member!</h1>
-</div>
+<div class="container">
+    <main>
+        <h1 class="display-4">Welcome to your fitness account!</h1>
 
+        <section class="function-section container">
+            <a asp-controller="Member" asp-action="MeasurementAppointment" class="function-card">
+                <h2>Measurement Appointment</h2>
+
+                <p>Get your measurement appointment before starting training.</p>
+            </a>
+
+            <a asp-controller="Routine" asp-action="RecordResults" class="function-card">
+                <h2>Record Excercise Results</h2>
+
+                <p>In this section, you can keep a record of training results.</p>
+            </a>
+
+            <a asp-controller="Routine" asp-action="Results" class="function-card">
+                <h2>Excercise Results List</h2>
+
+                <p>In this section, you can see the results of all your trainings.</p>
+            </a>
+        </section>
+
+
+    </main>
+</div>
