--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -19,4 +19,30 @@
     </main>
 </div>
 
+<div class="container">
+    <main>
+        <h2>Welcome Trainer!</h2>
 
+        <section class="function-section container">
+            <a asp-controller="Equipment" asp-action="Equipments" class="function-card">
+                <h2>Manage Equipments.</h2>
+
+                <p>In this section, you can register, update, and delete exercise equipment.</p>
+            </a>
+
+            <a asp-controller="Routine" asp-action="Create" class="function-card">
+                <h2>Create Routines</h2>
+
+                <p>In this section, you can create exercise routines.</p>
+            </a>
+
+            <a asp-controller="Routine" asp-action="addExerciseRoutine" class="function-card">
+                <h2>Add Routine Exercise</h2>
+
+                <p>In this section, you can add exercises to the routines.</p>
+            </a>
+        </section>
+
+
+    </main>
+</div>
