--- a/GymApp/wwwroot/css/site.css
+++ b/GymApp/wwwroot/css/site.css
@@ -66,6 +66,7 @@ body {
     text-align: center;
     width: 30%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
 }
 
     .pricing-card h2 {
