--- a/GymApp/Views/Shared/_LayoutUser.cshtml
+++ b/GymApp/Views/Shared/_LayoutUser.cshtml
@@ -21,12 +21,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">REGISTER NOW!</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Login">LOG IN</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">
+                                LOG OUT
+                            </a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
