Adding functionality in MemberPage

--- a/GymApp/Views/Admin/AdminPage.cshtml
+++ b/GymApp/Views/Admin/AdminPage.cshtml
@@ -12,15 +12,15 @@
 
         <section class="function-section container">
             <a asp-controller="Admin" asp-action="AssignRole" class="function-card">
-                <h2>Assign Roles</h2>
+                <h2>Assign User Roles</h2>
 
-                <p>In this section, you can assign roles to all user</p>
+                <p>In this section, you can assign user roles.</p>
             </a>
 
             <a asp-controller="Admin" asp-action="ManageUser" class="function-card">
-                <h2>Manage Users</h2>
+                <h2>Manage Users Information</h2>
 
-                <p>In this section, you can update the user information.</p>
+                <p>In this section, you can update users information.</p>
             </a>
         </section>
         
