--- a/GymApp/Views/Admin/AssignRole.cshtml
+++ b/GymApp/Views/Admin/AssignRole.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Assign Roles";
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutAssing.cshtml";
 }
 
 <script src="~/js/Pages/Admin/Admin.js" defer></script>
