--- a/GymApp/Views/Admin/ManageUser.cshtml
+++ b/GymApp/Views/Admin/ManageUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Manage Users";
 
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutAssing.cshtml";
 
 }
 
