--- a/GymApp/Views/Routine/RecordResults.cshtml
+++ b/GymApp/Views/Routine/RecordResults.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Record Routine Results";
-    Layout = "../Shared/_LayoutRoutines.cshtml";
+    Layout = "../Shared/_LayoutRecordResults";
 }
 <script src="~/js/pages/Routines/recordResult.js" defer></script>
 <link rel="stylesheet" href="~/css/recordresult.css" />
