--- a/GymApp/Views/Routine/Results.cshtml
+++ b/GymApp/Views/Routine/Results.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Recorded Routine Results";
-    Layout = "../Shared/_LayoutRoutines.cshtml";
+    Layout = "../Shared/_LayoutRecordResults";
 }
 <script src="~/js/pages/Routines/recordedResults.js" defer></script>
 <link rel="stylesheet" href="~/css/results.css" />
