--- a/GymApp/Views/Admin/AdminPage.cshtml
+++ b/GymApp/Views/Admin/AdminPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Admin Page";
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutAdmin.cshtml";
 }
 
 <link rel="stylesheet" href="~/css/admin.css" />
