--- a/GymApp/Views/Shared/_LayoutAssing.cshtml
+++ b/GymApp/Views/Shared/_LayoutAssing.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="AdminPage">
                     <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,12 +21,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="RegisterUser">REGISTER NOW!</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Login">LOG IN</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">
+                                LOG OUT
+                            </a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
