--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml
@@ -7,42 +7,39 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/GymUI.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
-
 </head>
 <body>
     <header>
-        <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
-        <nav>
-            <a href="#">
-                <img src="/css/Img/Profile.png" alt="Profile Icon">
-                <span>Profile</span>
-            </a>
-            <a href="#">
-                <img src="/css/Img/Notifications.png" alt="Notifications Icon">
-                <span>Notifications</span>
-            </a>
-            <a asp-controller="Routine" asp-action="Create">
-                <img src="/css/Img/Routines.png" alt="Routines Icon">
-                <span>Routines</span>
-            </a>
-            <a asp-controller="#" asp-action="#">
-                <img src="/css/Img/Classes.png" alt="Classes Icon">
-                <span>Classes</span>
-            </a>
-            <a asp-controller="Home" asp-action="Index">
-                <img src="/css/Img/LogOut.png" alt="Log Out Icon">
-                <span>Log Out</span>
-            </a>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">
+                                LOG OUT
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </nav>
     </header>
+
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <footer class="footer text-muted">
+        <div class="container text-center">
             &copy; 2024 - GymApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
@@ -58,4 +55,3 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
