--- a/GymApp/Views/Shared/_LayoutRoutines.cshtml.css
+++ b/GymApp/Views/Shared/_LayoutRoutines.cshtml.css
@@ -1,49 +1,37 @@
 ﻿/* Estilo de la barra de navegación */
-header {
+.navbar {
     background-color: #1e4f4f;
-    display: flex;
-    align-items: center;
-    padding: 10px 15px;
+    padding: 0px 15px; /* Reduce el tamaño de padding para hacer la barra más pequeña */
 }
 
-.logo {
-    width: 100px; /* Tamaño del logo */
+.navbar-brand .logo {
+    width: 100px; /* Reduce el tamaño del logo */
     height: auto;
-    margin-right: 20px;
 }
 
-nav {
-    display: flex;
-    gap: 20px;
+.navbar-nav {
     margin-left: auto; /* Mueve los enlaces de navegación a la derecha */
 }
 
-    nav a {
+    .navbar-nav .nav-link {
         color: white;
-        text-decoration: none;
-        font-size: 16px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+        font-size: 16px; /* Reduce el tamaño de la fuente */
+        margin-left: 15px;
     }
 
-        nav a img {
-            height: 30px; /* Ajuste de tamaño de los íconos */
-            margin-bottom: 5px;
-        }
-
-        nav a:hover {
+        .navbar-nav .nav-link:hover {
             color: #C0C0C0;
             text-decoration: underline;
         }
 
-/* Footer */
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28128, 128, 128, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 .footer {
     background-color: #1e4f4f;
     color: white;
     padding: 20px 0;
-    text-align: center;
 }
 
     .footer a {
@@ -55,3 +43,6 @@ nav {
             text-decoration: underline;
         }
 
+div.container.text-center {
+    color: white;
+}
