--- a/GymApp/wwwroot/css/recordresult.css
+++ b/GymApp/wwwroot/css/recordresult.css
@@ -1,62 +1,84 @@
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+/* Estilo general */
+body {
     font-family: 'Lora', serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
+/* Contenedor principal */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
     text-align: center;
+}
+
+/* Título principal */
+h1 {
+    font-size: 2.5em;
+    color: black;
     margin-bottom: 20px;
 }
 
+/* Estilo para el formulario */
 .form-container {
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    background: linear-gradient(to right, #c4c4c4, #ffffff);
+    padding: 40px;
+    border-radius: 10px;
+    width: 75%;
+    margin: 0 auto;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 form {
-    display: grid;
-    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
-label {
-    font-weight: bold;
-}
+    form label {
+        text-align: left;
+        font-weight: bold;
+        color: bla;
+    }
 
-input, select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+    form input, form select {
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 1em;
+        width: 100%;
+    }
 
 .button-container {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 button {
-    background-color: #1e4f4f;
-    color: white;
-    border: none;
     padding: 10px 20px;
+    background-color: #1e4f4f;
+    border: none;
     border-radius: 5px;
+    color: white;
+    font-size: 1em;
     cursor: pointer;
-    font-size: 16px;
 }
 
     button:hover {
-        background-color: #143b3b;
+        background-color: #164242;
     }
 
-select {
-    color: black; /* Asegúrate de que el color de texto sea visible */
-    background-color: white; /* Asegúrate de que el fondo sea blanco */
-}
+/* Estilos adicionales para pantallas pequeñas */
+@media (max-width: 768px) {
+    .form-container {
+        width: 90%;
+        padding: 20px;
+    }
 
-option {
-    color: black; /* Asegúrate de que el color del texto de las opciones sea visible */
-    background-color: white; /* Asegúrate de que el fondo de las opciones sea blanco */
+    h1 {
+        font-size: 2em;
+    }
 }
