--- a/GymApp/wwwroot/css/results.css
+++ b/GymApp/wwwroot/css/results.css
@@ -1,27 +1,66 @@
-.container {
+/* Estilo general */
+body {
     font-family: 'Lora', serif;
-    padding: 20px;
-}
-
-h1 {
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
     color: #1e4f4f;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+}
+
+h1 {
+    font-size: 3em;
+    color: black;
+    margin-bottom: 40px;
+}
+
+/* Estilo de la tabla de resultados */
 .results-container {
+    background-color: white;
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
     margin-top: 20px;
 }
 
-#resultsTable {
-    width: 100%;
-    border-collapse: collapse;
+th, td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
 }
 
-    #resultsTable th, #resultsTable td {
-        border: 1px solid #ddd;
-        padding: 8px;
+th {
+    background-color: #1e4f4f;
+    color: white;
+    font-weight: bold;
+}
+
+tr:hover {
+    background-color: #f2f2f2; /* Efecto hover */
+}
+
+td {
+    color: #333;
+}
+
+/* Ajustes adicionales para móviles */
+@media (max-width: 768px) {
+    table {
+        font-size: 0.9em;
     }
 
-    #resultsTable th {
-        background-color: #1e4f4f;
-        color: white;
+    th, td {
+        padding: 10px;
     }
+}
