--- a/GymApp/Views/Member/MemberPage.cshtml
+++ b/GymApp/Views/Member/MemberPage.cshtml
@@ -19,17 +19,13 @@
                 <p>Get your measurement appointment before starting training.</p>
             </button>
 
-            <a asp-controller="Routine" asp-action="RecordResults" class="function-card">
-                <h2>Record Excercise</h2>
+            <a asp-controller="Routine" asp-action="RoutineList" class="function-card">
+                <h2>Record Routine Excercise</h2>
 
-                <p>In this section, you can keep a record of your trainings.</p>
+                <p>In this section, you can keep a record of your training and see the results.</p>
             </a>
 
-            <a asp-controller="Routine" asp-action="Results" class="function-card">
-                <h2>Excercise Results</h2>
-
-                <p>In this section, you can see the results of your trainings.</p>
-            </a>
+     
         </section>
 
 
