--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -17,7 +17,7 @@
                 <p>In this section, you can register, update, and delete exercise equipment.</p>
             </a>
 
-            <a asp-controller="Routine" asp-action="addExerciseRoutine" class="function-card">
+            <a asp-controller="Exercise" asp-action="Create" class="function-card">
                 <h2>Register Exercise</h2>
 
                 <p>In this section, you can register exercises.</p>
