--- a/GymApp/Views/Admin/AssignRole.cshtml
+++ b/GymApp/Views/Admin/AssignRole.cshtml
@@ -4,7 +4,7 @@
 }
 
 <script src="~/js/Pages/Admin/Admin.js" defer></script>
-<link rel="stylesheet" href="~/css/admin.css" />
+<link rel="stylesheet" href="~/css/assingRole.css" />
 
 <div class="background-container">
     <h2>Assign Roles</h2>
