--- a/GymApp/Views/Default/DefaultPage.cshtml
+++ b/GymApp/Views/Default/DefaultPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Default Page";
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutAdmin.cshtml";
 }
 
 <script src="~/js/Pages/Default/Default.js" defer></script>
