--- a/GymApp/Views/User/ResetPasswordRequest.cshtml
+++ b/GymApp/Views/User/ResetPasswordRequest.cshtml
@@ -1,17 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Reset Password Request";
-    Layout = "../Shared/_Layout.cshtml";
+    Layout = "../Shared/_LayoutRequest.cshtml";
 
 }
 
 <script src="~/js/Pages/User/ResetPasswordRequest.js" defer></script>
 <link rel="stylesheet" href="~/css/users.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
-
-
-<div>
-    <p>< <a asp-area="" asp-controller="User" asp-action="Login">Back To Log In.</a></p>
-</div>
 
 <div class="container">
 
