--- a/GymApp/Views/User/VerifyAccount.cshtml
+++ b/GymApp/Views/User/VerifyAccount.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Verify Email Account";
-    Layout = "../Shared/_Layout.cshtml";
-
+    Layout = "../Shared/_LayoutAdmin.cshtml";
 }
-
 <script src="~/js/Pages/User/VerifyAccount.js" defer></script>
 <link rel="stylesheet" href="~/css/users.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
