--- a/GymApp/Views/User/ResetPassword.cshtml
+++ b/GymApp/Views/User/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Reset Password";
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutRequest.cshtml";
 
 }
 
