--- a/GymApp/wwwroot/css/admin.css
+++ b/GymApp/wwwroot/css/admin.css
@@ -12,6 +12,12 @@ body {
     padding: 20px;
     text-align: center; /* Centra el texto y los botones */
 }
+ h1 {
+    color: #1e4f4f;
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 h2 {
     font-size: 2.5em;
@@ -19,6 +25,9 @@ h2 {
     margin-bottom: 30px;
 }
 
+.display-4 {
+    font-size: 2.5rem;
+}
 /* Contenedor con fondo gris */
 .background-container {
     background: linear-gradient(to right, #c4c4c4, #ffffff); /* Degradado gris */
