--- a/GymApp/wwwroot/css/manageUser.css
+++ b/GymApp/wwwroot/css/manageUser.css
@@ -18,7 +18,7 @@ body {
 
 h2 {
     font-size: 2.5em;
-    color: black;
+    color: #1e4f4f;
     margin-bottom: 20px;
     text-align: center;
 }
