--- a/GymApp/wwwroot/css/results.css
+++ b/GymApp/wwwroot/css/results.css
@@ -15,8 +15,8 @@ body {
 }
 
 h1 {
-    font-size: 3em;
-    color: black;
+    font-size: 2.5em;
+    color:#1e4f4f;
     margin-bottom: 40px;
 }
 
