--- a/GymApp/wwwroot/css/routines.css
+++ b/GymApp/wwwroot/css/routines.css
@@ -15,10 +15,11 @@ body {
 }
 
 h1.display-4 {
-    font-size: 3em;
-    color: black;
+    font-size: 2.5em;
+    color: #1e4f4f;
     margin-bottom: 40px;
 }
+
 
 /* Sección de funciones */
 .function-section {
