--- a/GymApp/Views/Routine/Create.cshtml
+++ b/GymApp/Views/Routine/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Create Routine";
-    Layout = "../Shared/_LayoutRoutines.cshtml";
+    Layout = "../Shared/_LayoutExercises.cshtml";
 }
 <script src="~/js/pages/Routines/createRoutines.js" defer></script>
-<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="~/css/create.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
