--- a/GymApp/Views/Shared/_LayoutExercises.cshtml
+++ b/GymApp/Views/Shared/_LayoutExercises.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="" asp-controller="Trainer" asp-action="TrainerPage">
                     <img src="/css/Img/LogoFitnessCenter.png" alt="Logo" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
