--- a/GymApp/Views/Trainer/TrainerPage.cshtml
+++ b/GymApp/Views/Trainer/TrainerPage.cshtml
@@ -3,12 +3,12 @@
     Layout = "../Shared/_LayoutRoutineExercise.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/routines.css" />
+<link rel="stylesheet" href="~/css/trainer.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="container">
     <main>
-        <h2>Welcome Trainer!</h2>
+        <h1 class="display-4">Welcome Trainer!!</h1>
 
         <section class="function-section container">
             <a asp-controller="Equipment" asp-action="Equipments" class="function-card">
