--- a/GymApp/wwwroot/css/create.css
+++ b/GymApp/wwwroot/css/create.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Lora', serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -7,28 +7,23 @@ body {
 
 .container {
     width: 100%;
-    max-width: 1370px;
+    max-width: 1200px;
     margin: 0 auto;
-}
-
-main {
     padding: 20px;
     text-align: center;
-
 }
 
-    main h1 {
-        color: #1e4f4f;
-        font-size: 2.5rem;
-        text-align: center;
-        margin-bottom: 20px;
-    }
+h1 {
+    font-size: 2.5em;
+    color: #1e4f4f;
+    margin-bottom: 20px;
+}
 
 .form-container {
     background: linear-gradient(to right, #c4c4c4, #ffffff);
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
-    width: 40%;
+    width: 50%;
     margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -36,14 +31,16 @@ main {
 form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
 
     form label {
         text-align: left;
         font-weight: bold;
+        margin-bottom: 5px;
     }
 
+    form select,
     form input {
         padding: 10px;
         border-radius: 5px;
@@ -53,19 +50,39 @@ form {
 .button-container {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 form button {
-    padding: 10px;
-    width: 100px;
+    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     background-color: #1e4f4f;
     color: white;
     font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
     form button:hover {
-        background-color: #333;
+        background-color: #145454;
     }
+
+/* Media Query para pantallas pequeñas */
+@media (max-width: 768px) {
+    .form-container {
+        width: 80%;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    form {
+        gap: 10px;
+    }
+
+        form button {
+            width: 100%;
+        }
+}
