--- a/GymApp/Views/Equipment/Equipments.cshtml
+++ b/GymApp/Views/Equipment/Equipments.cshtml
@@ -1,5 +1,9 @@
-﻿<script src="~/js/Pages/Equipments/equipments.js" defer></script>
+﻿@{
+    ViewData["Title"] = "Equipment";
+    Layout = "../Shared/_LayoutExercises.cshtml";
+}
 
+<script src="~/js/Pages/Equipments/equipments.js" defer></script>
 <link rel="stylesheet" href="~/css/StyleEquipment.css" />
 
 <div class="container">
