--- a/GymApp/Views/Home/Index.cshtml
+++ b/GymApp/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <h1>YOUR FITNESS JOURNEY STARTS TODAY.</h1>
             <p>READY FOR YOUR FIRST CLASS?</p>
             <a asp-controller="User" asp-action="RegisterUser" class="button-container">
-                <button type="submit" class="btn btn-success" id="btnCreate">SUBSCRIBE NOW!</button>
+                <button type="submit" class="btn btn-success" id="btnCreate">START TRAINING NOW!</button>
             </a>
         </div>
     </div>
