--- a/GymApp/Views/Membership/ConfirmMembership.cshtml
+++ b/GymApp/Views/Membership/ConfirmMembership.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Confirm Membership Payment";
-    Layout = "../Shared/_LayoutUser.cshtml";
+    Layout = "../Shared/_LayoutMembership.cshtml";
 }
 <script src="~/js/Pages/Membership/ConfirmMembership.js" defer></script>
-<link rel="stylesheet" href="~/css/users.css" />
+<link rel="stylesheet" href="~/css/MemberShip.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap">
 
 <div class="container">
